STARCH-678 final review, oidc IT completed ready for unit tests, unstable work in progress